force-app/main/default/objects/cgcloud__Sales_Folder_Template__c/cgcloud__Sales_Folder_Template__c.object-meta.xml
<CustomObject>
    <description>This object consists of the attributes associated with the Sales Folder template.</description>
    <label>Sales Folder Template</label>
    <nameField>
        <label>Sales Folder Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Folder Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>