force-app/main/default/objects/cgcloud__Sales_Folder_Template__c/fields/cgcloud__Anchor_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Anchor_Type__c</fullName>
    <description>Type of object the Sales Folder is assigned to.</description>
    <label>Anchor Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BusinessPartner</fullName>
                <default>true</default>
                <label>BusinessPartner</label>
            </value>
            <value>
                <fullName>OrgUnit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>