force-app/main/default/objects/cgcloud__Sales_Folder_Template__c/fields/cgcloud__Promotion_Relevant__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Promotion_Relevant__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if related Sales Folder record is available for Promotion support.</description>
    <label>Promotion Relevant</label>
    <type>Checkbox</type>
</CustomField>