force-app/main/default/objects/cgcloud__Sales_Folder_Template__c/validationRules/cgcloud__Check_If_Anchor_Type_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Anchor_Type_Is_Changed</fullName>
    <active>true</active>
    <description>The Anchor Type can&apos;t be edited after Sales Folder Template creation.</description>
    <errorConditionFormula>AND(ISCHANGED(cgcloud__Anchor_Type__c) , NOT(ISBLANK(PRIORVALUE(cgcloud__Anchor_Type__c))))</errorConditionFormula>
    <errorMessage>The Anchor Type can&apos;t be edited after Sales Folder Template creation.</errorMessage>
</ValidationRule>