force-app/main/default/objects/cgcloud__Sales_Folder_Template__c/validationRules/cgcloud__Check_If_Promotion_Relevant_Is_Changed.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Promotion_Relevant_Is_Changed</fullName>
    <active>true</active>
    <description>The Promotion Relevant can&apos;t be edited after Sales Folder Template creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Promotion_Relevant__c)</errorConditionFormula>
    <errorMessage>The Promotion Relevant can&apos;t be edited after Sales Folder Template creation.</errorMessage>
</ValidationRule>